<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Merlo"
    android:orientation="vertical"
    tools:context="com.example.merloclient.SetupActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:background="#FFFFFF"
            android:alpha="0.8"
            android:padding="8dp" >
            
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_information"
                android:gravity="center"
                android:textSize="20sp" />

            <TableRow
                android:id="@+id/tableRow1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/nameET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text" >

                </EditText>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/addressET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPostalAddress"
                    android:maxLines="1"
                    android:ems="10" />

            </TableRow>
            
            <TableRow
                android:id="@+id/emailTR"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type" />

                <EditText
                    android:id="@+id/typeET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:ems="10" />

            </TableRow>

            <Button
                android:id="@+id/forgotPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="12sp"
                android:textColor="#0000FF"
                android:background="@android:color/transparent"
                android:onClick="forgotPassword" />

        </TableLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/next"
        android:onClick="next"
        style="?android:attr/buttonBarButtonStyle"
        android:background="@color/Green" />

</LinearLayout>
