<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Merlo"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >
    </TableLayout>

    <Button
        android:id="@+id/add_reward_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:text="@string/plus"
        android:onClick="addRow" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/add_reward_button"
        android:layout_alignBottom="@+id/add_reward_button"
        android:layout_toLeftOf="@+id/add_reward_button"
        android:text="@string/reward_list"
        android:gravity="center" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/next"
        android:onClick="nextPage" />

</RelativeLayout>