<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Merlo"
    android:orientation="vertical"
    tools:context="com.example.merloclient.LoginActivity"
    tools:ignore="MergeRootFrame" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#FFFFFF"
            android:alpha="0.8"
            android:padding="8dp" >
            
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:gravity="center"
                android:textSize="32sp" />

            <TableRow
                android:id="@+id/tableRow1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username" />

                <EditText
                    android:id="@+id/usernameET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text" >

                </EditText>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/passwordET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10" />

            </TableRow>
            
            <TableRow
                android:id="@+id/emailTR"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10" />

            </TableRow>

            <Button
                android:id="@+id/forgotPasswordButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textSize="12sp"
                android:textColor="#0000FF"
                android:background="@android:color/transparent"
                android:onClick="forgotPassword" />

        </TableLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login"
        android:onClick="login"
        style="?android:attr/buttonBarButtonStyle"
        android:background="@color/Yellow" />

</LinearLayout>
