<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Merlo"
    android:orientation="vertical"
    tools:context="com.example.merloclient.RewardScreen"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/reward_list"
        android:textSize="44sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" 
        android:background="#999999">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginBottom="2dp"
            android:background="#FFFFFF" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free" />
            
            <EditText
                android:id="@+id/rewardET1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/with" />
            
            <Spinner
                android:id="@+id/rewardSpinner1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/points" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginBottom="2dp"
            android:background="#FFFFFF" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free" />
            
            <EditText
                android:id="@+id/rewardET2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/with" />
            
            <Spinner
                android:id="@+id/rewardSpinner2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/points" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points" />
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginBottom="2dp"
            android:background="#FFFFFF" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free" />
            
            <EditText
                android:id="@+id/rewardET3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/with" />
            
            <Spinner
                android:id="@+id/rewardSpinner3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/points" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points" />
            
        </TableRow>
        
    </TableLayout>

    <Button
        android:id="@+id/loginButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/Green"
        android:onClick="next"
        android:text="@string/next" />

</LinearLayout>